maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: ';' expected but 'def' found.
verride def run() {
        ^